# azman

./: .env  Cargo.toml  README.md
app_macro/: Cargo.toml
app_macro/src/: lib.rs
app_macro_derive/: Cargo.toml
app_macro_derive/src/: lib.rs
app_macro_trait/: Cargo.toml
app_macro_trait/src/: lib.rs
migrations/: 20210830073826_all.sql
src/: lib.rs  main.rs
src/api/: mod.rs
src/api/v1/: auth.rs  domain.rs  mod.rs  org.rs  perm.rs  rbac.rs  role.rs  user.rs
src/repository/: mod.rs  traits.rs
src/repository/dao/: domain.rs  mod.rs  org.rs  perm.rs  role.rs  role_perm.rs  user.rs  user_org.rs  user_role.rs
src/repository/dto/: domain.rs  mod.rs  org.rs  perm.rs  rbac.rs  role.rs  role_perm.rs  user.rs  user_org.rs  user_role.rs
src/repository/vo/: domain.rs  mod.rs  org.rs  perm.rs  role.rs  role_perm.rs  user.rs  user_org.rs  user_role.rs
src/util/: api_error.rs  cors.rs  datetime_format.rs  error.rs  handle_error.rs  jwt.rs  mod.rs  restrict.rs  serde_format.rs  util.rs
