[package]
edition = "2018"
name = "app_macro"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.51"
rbatis = {version = "2.0.24", features = ["mysql", "tokio1", "debug_mode"]}
serde = {version = "1.0.130"}
