[package]
edition = "2018"
name = "app_macro"
version = "2.0.24"

[lib]
proc-macro=true

[dependencies.quote]
version = "1.0"

[dependencies.syn]
version = "1.0"
features = ["full"]

[dependencies]
async-trait = "0.1.51"
rbatis = {version = "2.0.24", features = ["mysql", "tokio1", "debug_mode"]}
serde = {version = "1.0.130"}